--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,23 @@
-@import url("https://fonts.googleapis.com/css2?family=Prompt:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 @import "tailwindcss";
 @import "tw-animate-css";
 
 @custom-variant dark (&:is(.dark *));
+
+@font-face {
+  font-family: "Sora";
+  src: url("/fonts/Sora-VariableFont_wght.ttf") format("truetype");
+  font-weight: 100 900;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Geist";
+  src: url("/fonts/Geist-VariableFont_wght.ttf") format("truetype");
+  font-weight: 100 900;
+  font-style: normal;
+  font-display: swap;
+}
 
 *,
 *::before,
@@ -25,8 +40,22 @@
   background-repeat: no-repeat;
 }
 
+.bg-about {
+  background-color: #0a0502;
+
+  background-image: radial-gradient(
+      ellipse 70% 70% at 100% 0%,
+      #63341a 0%,
+      transparent 100%
+    ),
+    radial-gradient(ellipse 50% 60% at 20% 40%, #1a0d03 0%, transparent 100%);
+
+  background-size: 100% 100%;
+  background-repeat: no-repeat;
+}
+
 @theme {
-  --default-font-family: "Prompt", sans-serif;
+  --default-font-family: "Sora", sans-serif;
 }
 
 @theme inline {
