--- a/src/index.css
+++ b/src/index.css
@@ -308,3 +308,11 @@ html {
   background-size: 100% 100%;
   background-repeat: no-repeat;
 }
+
+.hideScroll {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+.hideScroll::-webkit-scrollbar {
+  display: none;
+}
